--- a/vuefronter/package.json
+++ b/vuefronter/package.json
@@ -11,6 +11,8 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
     "vue": "^2.6.14",
+    "vue-concise-slider": "^4.2.5",
+    "vue-easy-slider": "^5.3.4",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
