--- a/vuefronter/package.json
+++ b/vuefronter/package.json
@@ -8,8 +8,12 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "element-ui": "^2.15.9",
+    "mavon-editor": "^2.10.4",
+    "showdown": "^2.1.0",
     "vue": "^2.6.14",
     "vue-concise-slider": "^4.2.5",
     "vue-easy-slider": "^5.3.4",
